--- a/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
@@ -176,6 +176,7 @@
 "alt-text-feedback-survey-satisfied" = "Satisfeito";
 "alt-text-feedback-survey-subtitle" = "Você está satisfeito com este recurso?";
 "alt-text-feedback-survey-title" = "Ajude a melhorar o recurso";
+"alt-text-feedback-survey-toast-title" = "Feedback enviado";
 "alt-text-feedback-survey-unsatisfied" = "Insatisfeito";
 "alt-text-license" = "Ao publicar alterações, você concorda com os [Termos de Uso]($1) e concorda irrevogavelmente em liberar sua contribuição sob a Licença [CC BY-SA 3.0]($2) e a [GFDL]($3). Você concorda que um hiperlink ou URL é atribuição suficiente sob a licença Creative Commons.";
 "alt-text-modal-title" = "Adicionar o texto alternativo que está faltando da imagem?";
