--- a/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hant.lproj/Localizable.strings
@@ -176,6 +176,7 @@
 "alt-text-feedback-survey-satisfied" = "滿意";
 "alt-text-feedback-survey-subtitle" = "您滿意此功能嗎？";
 "alt-text-feedback-survey-title" = "協助改善功能";
+"alt-text-feedback-survey-toast-title" = "意見反應已提交";
 "alt-text-feedback-survey-unsatisfied" = "不滿意";
 "alt-text-license" = "發佈變更即表示您同意[使用條款]($1)，且您不可撤銷地同意根據 [CC BY-SA 3.0]($2) 授權和 [GFDL]($3) 發佈您的貢獻。您同意，根據創用 CC 授權，超連結或 URL 即為充分的姓名標示。";
 "alt-text-modal-subtitle-image-recommendation" = "前一張圖片缺少替代文字，您要幫視覺障礙讀者們新增一個圖片描述嗎？";
