--- a/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
@@ -190,6 +190,12 @@
 "alt-text-experiment-onboarding-item-4-title" = "图像类型";
 "alt-text-experiment-onboarding-secondary-button-title" = "查看示例";
 "alt-text-experiment-onboarding-title" = "如何为图像撰写替代文字";
+"alt-text-experiment-onboarding-tooltip-1-body" = "根据文章的背景信息理解图像。";
+"alt-text-experiment-onboarding-tooltip-1-title" = "审查";
+"alt-text-experiment-onboarding-tooltip-2-body" = "在 Wikimedia Commons 上查看其他图像信息。";
+"alt-text-experiment-onboarding-tooltip-2-title" = "检查";
+"alt-text-experiment-onboarding-tooltip-3-body" = "为视障读者添加描述。";
+"alt-text-experiment-onboarding-tooltip-3-title" = "添加描述";
 "alt-text-experiment-text-field-description" = "为看不到图像的读者提供文字描述";
 "alt-text-experiment-text-field-placholder" = "描述图片";
 "alt-text-experiment-view-title" = "添加替代文字";
