Logging, clean up

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -106,6 +106,12 @@
 "advanced-settings-title" = "Advanced settings";
 "alt-text-add-button-title" = "Add";
 "alt-text-do-not-add-button-title" = "Do not add";
+"alt-text-email-fifth-line" = "[Screenshots or Links]";
+"alt-text-email-first-line" = "I've encountered a problem with the Alt Text feature:";
+"alt-text-email-fourth-line" = "- [Describe proposed solution]";
+"alt-text-email-second-line" = "- [Describe specific problem]";
+"alt-text-email-third-line" = "The behavior I would like to see is:";
+"alt-text-email-title" = "Issue Report - Alt Text Feature";
 "alt-text-experiment-caption-title" = "Image caption";
 "alt-text-experiment-character-counter-format" = "$1/$2";
 "alt-text-experiment-character-counter-warning" = "Try to keep alt text short so users can easily understand the image content";
@@ -636,11 +642,11 @@
 "image-rec-tooltip-3-title" = "Decide";
 "image-rec-view-article" = "View article";
 "image-recommendations-email-fifth-line" = "[Screenshots or Links]";
-"image-recommendations-email-first-line" = "I've encountered a problem with the Alt Text feature:";
+"image-recommendations-email-first-line" = "I’ve encountered a problem with the Add an Image Suggested Edits Feature:";
 "image-recommendations-email-fourth-line" = "- [Describe proposed solution]";
 "image-recommendations-email-second-line" = "- [Describe specific problem]";
 "image-recommendations-email-third-line" = "The behavior I would like to see is:";
-"image-recommendations-email-title" = "Issue Report - Alt Text Feature";
+"image-recommendations-email-title" = "Issue Report - Add an Image Feature";
 "image-recs-no-title" = "No";
 "image-recs-not-sure-title" = "Not sure";
 "image-recs-time-warning-message" = "Please review the article to understand its topic and inspect the image";
