--- a/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt-br.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 // Author: Felipe L. Ewald
 // Author: Fitoschido
 // Author: Fúlvio
+// Author: Grey Olson
 // Author: HenriqueCrang
 // Author: Lc97
 // Author: Luckas
@@ -1310,3 +1311,9 @@
 "wikitext-upload-save-anonymously-warning" = "Suas edições serão atribuídas ao endereço de IP de seu dispositivo. Se você $1 você terá mais privacidade.";
 "wikitext-upload-save-sign-in" = "Entrar";
 "wikitext-upload-save-terms-name" = "Termo de uso";
+"alt-text-email-fifth-line" = "Capturas de tela ou links";
+"alt-text-email-first-line" = "Encontrei um problema com o recurso texto alternativo:";
+"alt-text-email-fourth-line" = "Descreva a solução proposta";
+"alt-text-email-second-line" = "Descreva o problema específico";
+"alt-text-email-third-line" = "O comportamento que eu gostaria de ver é:";
+"alt-text-email-title" = "Relatório de problema — recurso de texto alternativo";
