--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -953,6 +953,18 @@
 "preference-summary-eventlogging-opt-in" = "Allow Wikimedia Foundation to collect information about how you use the app to make the app better";
 "privacy-policy-title" = "Privacy policy";
 "problem-with-feature-title" = "Problem with feature";
+"profile-page-donate" = "Donate";
+"profile-page-donate-subtext" = "Or support Wikipedia with a donation to keep it free and accessible for everyone around the world.";
+"profile-page-done-button" = "Done";
+"profile-page-join-subtext" = "Sign up for a Wikipedia account to track your contributions, save articles offline, and sync across devices.";
+"profile-page-join-title" = "Join Wikipedia / Log in";
+"profile-page-logout" = "Log out";
+"profile-page-notification-title" = "Notifications";
+"profile-page-settings" = "Settings";
+"profile-page-talk-page-title" = "Talk page";
+"profile-page-title-logged-out" = "Account";
+"profile-page-user-page-title" = "User page";
+"profile-page-watchlist-title" = "Watchlist";
 "project-name-mediawiki" = "MediaWiki";
 "project-name-wikibooks" = "Wikibooks";
 "project-name-wikidata" = "Wikidata";
