--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -953,6 +953,17 @@
 "preference-summary-eventlogging-opt-in" = "Description of preference that when checked enables data collection of user behavior.";
 "privacy-policy-title" = "Title for the privacy Policy";
 "problem-with-feature-title" = "Button title text that allows user to send feedback to the iOS support email about a particular feature.";
+"profile-page-donate" = "Link to donate";
+"profile-page-donate-subtext" = "Information about supporting Wikipedia through donations";
+"profile-page-join-subtext" = "Information about signing in or up";
+"profile-page-join-title" = "Link to sign up or sign in";
+"profile-page-logout" = "Log out button";
+"profile-page-notification-title" = "Link to notifications page";
+"profile-page-settings" = "Link to settings";
+"profile-page-talk-page-title" = "Link to talk page";
+"profile-page-title-logged-out" = "Page title for non-logged in users";
+"profile-page-user-page-title" = "Link to user page";
+"profile-page-watchlist-title" = "Link to watchlist";
 "project-name-mediawiki" = "Project name for MediaWiki.";
 "project-name-wikibooks" = "Project name for Wikibooks.";
 "project-name-wikidata" = "Project name for Wikidata.";
