--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -208,6 +208,8 @@
 "clearing-cache-in-progress" = "Clearing cache in progress.";
 "close-button-accessibility-label" = "Close";
 "compass-direction" = "at $1 o'clock";
+"confirm-donation-history-deletion" = "Confirm deletion";
+"confirmed-donation-history-deletion" = "Local history deleted";
 "continue-button-title" = "Continue";
 "continue-reading-empty-description" = "Explore Wikipedia for more articles to read";
 "continue-reading-empty-title" = "No recently read articles";
@@ -321,6 +323,7 @@
 "donate-help-other-ways-to-give" = "Other ways to give";
 "donate-help-problems-donating" = "Problems donating?";
 "donate-help-tax-deductibility-information" = "Tax deductibility information";
+"donate-history-delete" = "Delete local donation history";
 "donate-later-title" = "We will remind you again tomorrow.";
 "donate-maximum-error-text" = "We cannot accept donations greater than $1 $2 through our website. Please contact our major gifts staff at benefactors@wikimedia.org.";
 "donate-minimum-error-text" = "Please select an amount (minimum $1 $2).";
@@ -335,9 +338,6 @@
 "donate-transaction-fee-opt-in-text" = "I’ll generously add $1 to cover the transaction fees so you can keep 100%% of my donation.";
 "donate-wikimedia-fine-print-1" = "We do not sell or trade your information to anyone. By donating, you agree to share your personal information with the Wikimedia Foundation, the nonprofit organization that hosts Wikipedia and other Wikimedia projects, and its service providers pursuant to our [donor policy]($1). Wikimedia Foundation and its service providers are located in the United States and in other countries whose privacy laws may not be equivalent to your own. For more information please read our [donor policy]($1).";
 "donate-wikimedia-fine-print-2" = "For recurring donors, fixed monthly payments will be debited by the Wikimedia Foundation on the monthly anniversary of the first donation, until such time as you notify us to discontinue them. Donations initiated on the 29, 30, or 31 of the month will recur on the last day of the month for shorter months, as close to the original date as possible. For questions, please contact donate@wikimedia.org.";
-"donation-history-button-delete-title" = "Delete local history";
-"donation-history-empty-view-title" = "You have no locally saved donations";
-"donation-history-view-title" = "Donation history";
 "edit-link-display-text-title" = "Display text";
 "edit-link-link-target-title" = "Link target";
 "edit-link-remove-link-title" = "Remove link";
