--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -208,6 +208,8 @@
 "clearing-cache-in-progress" = "Title of banner that appears when a user taps clear cache button in Settings. Informs the user that clearing of cache is in progress.";
 "close-button-accessibility-label" = "Accessibility label for a button that closes a dialog. {{Identical|Close}}";
 "compass-direction" = "Spoken description of compass direction, e.g. \"at 3 o'clock\" means \"to the right\", \"at 11 o'clock\" means \"slightly to the left\", etc. $1 is the hour.";
+"confirm-donation-history-deletion" = "Title for confirm deletion alert";
+"confirmed-donation-history-deletion" = "Title for confirming deletion of locally saved donations alert";
 "continue-button-title" = "Continue button title";
 "continue-reading-empty-description" = "Explore Wikipedia for more articles to read";
 "continue-reading-empty-title" = "No recently read articles";
@@ -321,6 +323,7 @@
 "donate-help-other-ways-to-give" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
 "donate-help-problems-donating" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
 "donate-help-tax-deductibility-information" = "Help link at the bottom of the donate form, that takes user to a web view link with more info.";
+"donate-history-delete" = "Text for delete locally saved donation history button";
 "donate-later-title" = "Title for toast shown when user clicks remind me later on fundraising banner";
 "donate-maximum-error-text" = "Error text displayed when user enters donation amount above the maximum. Parameters: * $1 - the currency code, $2 - the maximum donation amount allowed. (For example, 'USD $25,000')";
 "donate-minimum-error-text" = "Error text displayed when user enters donation amount below the allowed minimum. Parameters: * $1 - the minimum amount allowed, $2 - the currency code. (For example, '$1 USD')";
@@ -335,9 +338,6 @@
 "donate-transaction-fee-opt-in-text" = "Transaction fee checkbox on donate form. Checking it adds transaction fee to donation amount. Parameters: * $1 - transaction fee amount. Please leave %% unchanged for proper formatting.";
 "donate-wikimedia-fine-print-1" = "Wikimedia data policy fine print displayed on donation form for Apple Pay. Do not translate donor policy url. $1 is replaced by the localized donor policy link.";
 "donate-wikimedia-fine-print-2" = "Recurring donor fine print displayed on donation form for Apple Pay. Do not translate email.";
-"donation-history-button-delete-title" = "Title for local donation history delete button";
-"donation-history-empty-view-title" = "Title for donation history empty view";
-"donation-history-view-title" = "Title for the donation history view";
 "edit-link-display-text-title" = "Title for the display text label";
 "edit-link-link-target-title" = "Title for the link target label";
 "edit-link-remove-link-title" = "Title for the remove link button";
